# UdemyPractice

./: README.md
UdemyHPC/: CMakeCache.txt  CMakeLists.txt  Makefile  UdemyHPC  UdemyHPC.cbp  cmake_install.cmake  concurrency  concurrency-example.cpp  promise  promise_example.cpp  pthread_example.cpp
UdemyIPC/: CMakeCache.txt  CMakeLists.txt  Makefile  UdemyIPC.cbp  client.c  cmake_install.cmake  msgqueue-receiver.c  msgqueue-sender.c  multiplexing-server.c  queue-receiver  queue-sender  rcv  sender  server.c  shm_impl.c  shm_reader  shm_reader.c  shm_writer  shm_writer.c
UdemyRPC/: CMakeLists.txt  a.out  main.c  multiply_client.c  rpc_common.h
UdemyTDD/: CMakeCache.txt  CMakeLists.txt  Makefile  UdemyTDD.cbp  cmake_install.cmake
UdemyTDD/gmock/: CMakeCache.txt  Makefile  cmake_install.cmake
UdemyTDD/gmock/gtest/: Makefile  cmake_install.cmake
UdemyTDD/program/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
UdemyTDD/src/: CMakeLists.txt  Makefile  Math.cpp  Math.h  cmake_install.cmake
UdemyTDD/test/: MathTest.cpp
